--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/fontawesome/css/all.css">
   <link rel="stylesheet" href="src/CSS/style.css"/>
-  <script src="src/app.js"></script>
+  <script defer src="src/app.js"></script>
   <!-- add a link and a script tag, nothing else -->
   <title>1620 Exam</title>
 </head>
